@@ -128,6 +128,7 @@ namespace MySql.Data.MySqlClient
             while (FindToken())
             {
                 if ((stopIndex - startIndex) < 2) continue;
+         string token = sql.Substring(startIndex, stopIndex - startIndex).Trim();
                 char c1 = sql[startIndex];
                 char c2 = sql[startIndex+1];
                 if (c1 != '@' && c1 != '?') continue;
@@ -271,7 +272,14 @@ namespace MySql.Data.MySqlClient
 
         private bool IsSpecialCharacter(char c)
         {
-            return c == '(' || c == ')' || c == ',' || c == ';' || c == '-' || c == '/' || c == '#';
+            return c == '=' || 
+                   c == '(' || 
+                   c == ')' || 
+                   c == ',' || 
+                   c == ';' || 
+                   c == '-' || 
+                   c == '/' || 
+                   c == '#';
         }
     }
 }
